# RoadRunner-Autonomous-Sidewalk-Delivery-Robot

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
backend/: landmark_parser.py  mission_planner.py  teleop_service.py
docs/: deployment_guide.md  india_challenges.md  research_roadmap.md
flutter_app/: pubspec.yaml
flutter_app/lib/: main.dart
flutter_app/lib/localization/: app_localizations.dart  localization_delegate.dart
flutter_app/lib/screens/: home_screen.dart
hardware/: rugged_chassis.md
ml/: indian_dataset.md
ros_ws/indian_nav_scenarios/: CMakeLists.txt  package.xml
ros_ws/indian_nav_scenarios/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
ros_ws/indian_nav_scenarios/launch/: delhi_street.launch
ros_ws/indian_nav_scenarios/models/india_delivery_robot/: india_delivery_robot.urdf.xacro
ros_ws/indian_nav_scenarios/scripts/: indian_traffic_simulator.py
ros_ws/indian_nav_scenarios/worlds/: delhi_street.world
